@@ -77,6 +77,9 @@
 #define fs_w ((loop)->fs_w)
 #define fs_2625 ((loop)->fs_2625)
 #define fs_hash ((loop)->fs_hash)
+#define sigfd ((loop)->sigfd)
+#define sigfd_w ((loop)->sigfd_w)
+#define sigfd_set ((loop)->sigfd_set)
 #define loop_count ((loop)->loop_count)
 #define loop_depth ((loop)->loop_depth)
 #define userdata ((loop)->userdata)
@@ -161,6 +164,9 @@
 #undef fs_w
 #undef fs_2625
 #undef fs_hash
+#undef sigfd
+#undef sigfd_w
+#undef sigfd_set
 #undef loop_count
 #undef loop_depth
 #undef userdata
